Minor fix to selected class

--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
@@ -47,6 +47,7 @@
         $(show_id).css('display', 'none');
       }
       cf = $('#show-feature-'+feature_name);
+      cf.parent().addClass('selected');
       
     });
   });
