--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
@@ -47,7 +47,6 @@
         $(show_id).css('display', 'none');
       }
       cf = $('#show-feature-'+feature_name);
-      cf.parent().addClass('selected');
       
     });
   });
@@ -77,7 +76,7 @@
     </div>
   
     <div class="feature-video">
-      <img src="{{ MEDIA_URL }}slideshow/contact/0.crop.png" alt="Contact search"/>
+      <img src="{{ MEDIA_URL }}slideshow/" alt="Contact search"/>
     </div>
   </div>
 
