--- a/trunk/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/trunk/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -142,6 +142,8 @@ div.footer div.container {
     background-color: #ffffff;
     -moz-border-radius-topleft:10px;
     -moz-border-radius-topright:10px;
+    -webkit-border-top-left-radius:10px;
+    -webkit-border-top-right-radius:10px;
     
     /*background: #ffffff url(../png/desktop/footer-background.png) repeat-x scroll center top;
     border-top:1px dashed #002147;
@@ -194,7 +196,7 @@ a#show-feature-other span {
   }
   
   .feature-list ul {
-    background: white;
+    background: #eee;
     list-style:none;
     margin:0;
     padding:5px;
@@ -209,6 +211,9 @@ a#show-feature-other span {
     -moz-border-radius:10px;
   }
   
+  .feature-list li.selected {
+      background: white;
+  }
   .feature-list li a {
     color:#002147;
     text-align:center;
@@ -242,7 +247,7 @@ a#show-feature-other span {
   
   .feature-info {
     float:right;
-    width: 295px;
+    width: 275px;
     #height: 412px;
     border-radius:10px;
     -moz-border-radius:10px;
@@ -278,12 +283,12 @@ a#show-feature-other span {
   }
   
   #feature-descriptions {
-    width:625px;
+    width:605px;
     height:432px;
     float:right;
     position:relative;
     overflow:hidden;
-    padding: 10px;
+    padding: 20px;
     border-radius:10px;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
