--- a/tags/0.2/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/tags/0.2/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -142,6 +142,8 @@ div.footer div.container {
     background-color: #ffffff;
     -moz-border-radius-topleft:10px;
     -moz-border-radius-topright:10px;
+    -webkit-border-top-left-radius:10px;
+    -webkit-border-top-right-radius:10px;
     
     /*background: #ffffff url(../png/desktop/footer-background.png) repeat-x scroll center top;
     border-top:1px dashed #002147;
@@ -176,17 +178,17 @@ div.logos {
 
 
 a#show-feature-contact span {
-  background-image:url('../png/index-icons/contact-bc.png'); }
+  background-image:url('../png/index-icons/contact-30px.png'); }
 a#show-feature-maps span {
-  background-image:url('../png/index-icons/maps-bc.png'); }
+  background-image:url('../png/index-icons/maps-30px.png'); }
 a#show-feature-z3950 span {
-  background-image:url('../png/index-icons/z3950-bc.png'); }
+  background-image:url('../png/index-icons/z3950-30px.png'); }
 a#show-feature-podcasts span {
-  background-image:url('../png/index-icons/podcasts-bc.png'); }
+  background-image:url('../png/index-icons/podcasts-30px.png'); }
 a#show-feature-search span {
-  background-image:url('../png/index-icons/search-bc.png'); }
+  background-image:url('../png/index-icons/search-30px.png'); }
 a#show-feature-other span {
-  background-image:url('../png/index-icons/other-bc.png'); }
+  background-image:url('../png/index-icons/other-30px.png'); }
 
   .feature-list {
     float:left;
@@ -194,9 +196,10 @@ a#show-feature-other span {
   }
   
   .feature-list ul {
+    background: #eee;
     list-style:none;
     margin:0;
-    padding-left:0;
+    padding:5px;
     border-radius:10px;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
@@ -208,6 +211,9 @@ a#show-feature-other span {
     -moz-border-radius:10px;
   }
   
+  .feature-list li.selected {
+      background: white;
+  }
   .feature-list li a {
     color:#002147;
     text-align:center;
@@ -218,7 +224,7 @@ a#show-feature-other span {
   .feature-list span {
     background-repeat:no-repeat;
     background-position:center left;
-    padding-left:30px;
+    padding-left:35px;
     display:block;
     min-height:40px;
     vertical-align:middle;
@@ -241,7 +247,7 @@ a#show-feature-other span {
   
   .feature-info {
     float:right;
-    width: 295px;
+    width: 275px;
     #height: 412px;
     border-radius:10px;
     -moz-border-radius:10px;
@@ -277,12 +283,12 @@ a#show-feature-other span {
   }
   
   #feature-descriptions {
-    width:625px;
+    width:605px;
     height:432px;
     float:right;
     position:relative;
     overflow:hidden;
-    padding: 10px;
+    padding: 20px;
     border-radius:10px;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
