--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
@@ -5,6 +5,7 @@
   expected_page_name = hash[0];
   feature_name = (hash.length == 2) ? hash[1] : "contact";
   var current_feature = null;
+  var cf = null;
 
   
   function show_feature(e) {
@@ -19,11 +20,12 @@
 
     
       });
+      
+      cf.parent().removeClass('selected');
+      $(this).parent().addClass('selected');
+      cf = $(this);
+      
     }
-    $(this).blur();
-            video = next_feature.find('video').get(0);
-        video.pause();
-        video.currentTime = 0;
     return false;
 
   }
@@ -44,6 +46,7 @@
       if (('#features-'+feature_name) != show_id) {
         $(show_id).css('display', 'none');
       }
+      cf = $('#show-feature-'+feature_name);
       
     });
   });
@@ -73,7 +76,7 @@
     </div>
   
     <div class="feature-video">
-      <img src="{{ MEDIA_URL }}slideshow/contact/0.crop.png" alt="Contact search"/>
+      <img src="{{ MEDIA_URL }}slideshow/" alt="Contact search"/>
     </div>
   </div>
 
