--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
@@ -4,13 +4,13 @@
 <div class="slideshow">
   <ul>
     <li>
-      <img src="{{ MEDIA_URL }}png/slideshow/1.jpg" width="545" height="360" alt="Foo"/>
+      <img src="{{ MEDIA_URL }}png/slideshow/1.jpg" width="545" height="360" alt="An iPhone showing the Mobile Oxford home page."/>
       <div class="slideshow-caption">
         The city and University. In your pocket.
       </div>
     </li>
     <li>
-      <img src="{{ MEDIA_URL }}png/slideshow/6.jpg" width="545" height="360" alt="Foo"/>
+      <img src="{{ MEDIA_URL }}png/slideshow/6.jpg" width="545" height="360" alt="A BlackBerry showing the bus arrival times for a bus stop, next to a cup of coffee and a book."/>
       <div class="slideshow-caption">
         Stay in the warm until your bus arrives.
       </div>
