--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
@@ -76,7 +76,7 @@
     </div>
   
     <div class="feature-video">
-      <img src="{{ MEDIA_URL }}slideshow/" alt="Contact search"/>
+      <img src="{{ MEDIA_URL }}slideshow/contact/0.crop.png" alt="Contact search"/>
     </div>
   </div>
 
