--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
@@ -15,6 +15,18 @@
         Stay in the warm until your bus arrives.
       </div>
     </li>
+    <li>
+      <img src="{{ MEDIA_URL }}png/slideshow/7.jpg" width="545" height="360" alt="A number of shop/restaurant fronts"/>
+      <div class="slideshow-caption">
+        Find places to eat.
+      </div>
+    </li>
+    <li>
+      <img src="{{ MEDIA_URL }}png/slideshow/8.jpg" width="545" height="360" alt="A photograph showing the plaque on the Oxford History Faculty Entrance"/>
+      <div class="slideshow-caption">
+        New Student? Find the places that matter the most to you. 
+      </div>
+    </li>
   </ul>
 </div>
 
