Social networks rename

--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
@@ -115,7 +115,7 @@
 <div class="outer-col">
 
 <div class="about">
-    <h3>Talk to us</h3>
+    <h3>Social Networks</h3>
 	<ul class="icon-list">
     <li><a id="social-facebook" href="http://www.facebook.com/mobileoxford">Facebook</a></li>
     <li><a id="social-twitter" href="http://twitter.com/mobileox">Twitter</a></li>
