Pushing style /UI changes from trunk for desktop pages

--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/exposition/container.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/exposition/container.xhtml
@@ -94,7 +94,7 @@
     <div class="container" style="height:145px;">
       <div class="header-strapline">
         <h1>
-          <img src="{{ MEDIA_URL }}png/desktop-logo.png" alt="Mobile Oxford" height="62" width="445"/>
+          <a href="{% url core_exposition %}"><img style="border:0" src="{{ MEDIA_URL }}png/desktop-logo.png" alt="Mobile Oxford" height="62" width="445"/></a>
         </h1>
       </div>
     <div class="navigation">
