--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
@@ -195,7 +195,7 @@
     </div>
   
     <div class="feature-video">
-      <img src="{{ MEDIA_URL }}slideshow/results/0.crop.png" alt="Contact search"/>
+      <img src="{{ MEDIA_URL }}slideshow/other/0.crop.png" alt="Contact search"/>
     </div>
   </div>
   
