--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
@@ -15,6 +15,18 @@
         Stay in the warm until your bus arrives.
       </div>
     </li>
+<!--    <li>
+        <img src="{{ MEDIA_URL }}png/slideshow/7.jpg" width="545" height="360" alt="A number of shop/restaurant fronts"/>
+      <div class="slideshow-caption">
+        Find places to eat.
+      </div>
+    </li> -->
+    <li> 
+      <img src="{{ MEDIA_URL }}png/slideshow/8.jpg" width="545" height="360" alt="A photograph showing the plaque on the Oxford History Faculty Entrance"/>
+      <div class="slideshow-caption">
+        New Student? Find the places that matter the most to you. 
+      </div>
+    </li>
   </ul>
 </div>
 
@@ -22,6 +34,7 @@
 </div>
 
 <div class="outer-col">
+    
 <div class="preview">
   <p>Get Mobile Oxford on<br/>your device at:</p>
   
@@ -102,7 +115,7 @@
 <div class="outer-col">
 
 <div class="about">
-    <h3>Talk to us</h3>
+    <h3>Social Networks</h3>
 	<ul class="icon-list">
     <li><a id="social-facebook" href="http://www.facebook.com/mobileoxford">Facebook</a></li>
     <li><a id="social-twitter" href="http://twitter.com/mobileox">Twitter</a></li>
