--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
@@ -102,7 +102,7 @@
 <div class="centre-col">
 
 <div class="about">
-  <h3 style="margin-bottom:10px;">Get involved</h3>
+  <h3 style="margin-bottom:10px;">Talk to us</h3>
 	<p><em>Mobile Oxford</em> is a rapidly developing service, and we'd
      like to know what you think. If you have any comments, suggestions
      or feature requests you can e-mail us at
