--- a/trunk/mobile_portal/molly/apps/contact/templates/contact/index.xhtml
+++ b/trunk/mobile_portal/molly/apps/contact/templates/contact/index.xhtml
@@ -3,94 +3,9 @@
 {% block title %}m.ox | Contact search{% if query %}: {{ query }}{% endif %}{% endblock %}
 
 {% block content %}
-<div class="section">
-  <div class="form">	
-  <form method="get" action=".">
-    <h2>
-      <label for="id_query">Search</label>
-    </h2>
-    <p>
-      {{ form.query }}
-    </p>
-    <p>
-      <button type="submit" name="medium" value="email">E-mail</button>
-      <button type="submit" name="medium" value="phone">Phone</button>
-    </p>
-  </form>
-  </div>
-</div>
 
-{% if form.is_valid %}
-<div class="section">
-  <h2>Results</h2>
-  {% if message %}
-  <div class="note"><div class="bubble pad-10">
-    {{ message }}
-  </div></div>
-  {% endif %}
+{% include "contact/search_form.xhtml" %}
 
-  {% if page %}
-  <div class="note"><div class="bubble pad-10">
-    {% if paginator.num_pages|gte:4 %}
-    Your search returned {{ paginator.count }} item{{ paginator.count|pluralize }}. Try adding an initial to get more specific results.
-    {% else %}
-    Your search returned {{ paginator.count }} item{{ paginator.count|pluralize }}.
-    {% endif %}
-  </div></div>
-
-  {% ifnotequal 1 page_count %}
-  <div class="note">
-    Pages:
-    {% for page_number in paginator.page_range %}
-    <a href="?page={{ page_number }}&amp;medium={{ form.cleaned_data.medium }}&amp;query={{ form.cleaned_data.query|urlencode }}" style="padding:0 7px 0 0;">{{ page_number }}</a>
-    {% endfor %}
-  </div>
-  {% endifnotequal %}
-
-  <ul id="people">
-  {% for person in page.object_list %}
-    <li{% if forloop.last %} class="round-bottom"{% endif %}>
-    {% ifequal form.cleaned_data.medium "email" %}
-      <a class="email" href="mailto:{{ person.email }}">
-    {% else %}
-      <a class="phone" href="{{ person.external|telephone_uri }}">
-    {% endifequal %}
-        {{ person.name }}
-        <br/>
-        <small>
-          {% if person.unit %}{{ person.unit }}{% else %}<em>Unknown affiliation</em>{% endif %}<br />
-    {% ifequal form.cleaned_data.medium "email" %}
-          {{ person.email }}
-    {% else %}
-          {{ person.external }}
-    {% endifequal %}
-        </small>
-      </a>
-    </li>
-  {% endfor %}
-  </ul>
-
-  {% ifnotequal 1 page_count %}
-  <div class="note">
-    Pages:
-    {% for page_number in paginator.page_range %}
-    <a href="?page={{ page_number }}&amp;medium={{ form.cleaned_data.medium }}&amp;query={{ form.cleaned_data.query|urlencode }}" style="padding:0 7px 0 0;">{{ page_number }}</a>
-    {% endfor %}
-  </div>
-  {% endifnotequal %}
-
-{% else %}
-  {% if not message %}
-  <div class="note"><div class="bubble pad-10">
-    Your search didn't return any results.
-  </div></div>
-  {% endif %}
-{% endif %}
-</div>
-
-{% endif %}
-
-{% if not form.is_valid %}
 <div class="section">
   <h2>University contacts</h2>
   <ul>
@@ -120,17 +35,5 @@
     <li class="round-bottom"><a class="phone" href="tel:+448457909090">Samaritans<br /><small>08457 90 90 90</small></a></li>
   </ul>
 </div>
-  
-			{% comment %}  
-			{# Update to retrieve College/Department contacts #}
-			<div class="section">
-			<h2>Other contacts</h2>
-			<ul>
-			    <li class="email"><a href="{% url contact_quick %}">College contacts</a></li>
-			    <li><a href="{% url contact_quick %}">Department contacts</a></li>
-			</ul>
-			</div>
-			{% endcomment %}
-{% endif %}
 
 {% endblock %}
