--- a/trunk/mobile_portal/molly/templates/core/update_location_embed.xhtml
+++ b/trunk/mobile_portal/molly/templates/core/update_location_embed.xhtml
@@ -30,9 +30,9 @@
 
 {% else %}
 
-<form method="get" action="{% url core_update_location %}" class="manual-update-form">
+<form method="get" action="{% url core:update_location %}" class="manual-update-form">
         <label for="location-name">Set a new location</label>:
-        <input name="return_url" type="hidden" value="{{ return_url|default:path }}"/>
+        <input name="return_url" type="hidden" value="{{ return_url|default:"" }}"/>
         <input id="location-name" name="name" value="{{ location }}"/>
         <input type="submit" value="Update"/><br/>
         <small>Examples: 'oucs' (a unit code), 'Trinity College' (a college or department), 'Parks Road' (an address), 'OX1 3PG' (a postcode).</small>
