--- a/trunk/mobile_portal/molly/templates/z3950/search_form.xhtml
+++ b/trunk/mobile_portal/molly/templates/z3950/search_form.xhtml
@@ -33,7 +33,7 @@
   </div></div>
 
   <div id="library-search">
-    <form method="get" action="{% url z3950_search %}">
+    <form method="get" action="{% url z3950:search %}">
       <table>
         <tbody>
           <tr>
