--- a/trunk/mobile_portal/molly/templates/z3950/index.xhtml
+++ b/trunk/mobile_portal/molly/templates/z3950/index.xhtml
@@ -11,8 +11,8 @@
     <h2>Maps</h2>
 	{% include "core/update_location_embed.xhtml" %}
     <ul>
-        <li><a href="{% url maps_category_detail "ulibrary" %}">List of libraries</a></li>
-        <li class="round-bottom"><a href="{% url maps_nearby_detail "ulibrary" %}">Libraries near me</a></li>
+        <li><a href="{% url maps:category_detail "ulibrary" %}">List of libraries</a></li>
+        <li class="round-bottom"><a href="{% url maps:nearby_detail "ulibrary" %}">Libraries near me</a></li>
     </ul>
 </div>
 
