Started refactoring weather and sakai apps. OAuth is now separated from Sakai.

--- a/trunk/mobile_portal/molly/templates/osm/metadata.xhtml
+++ b/trunk/mobile_portal/molly/templates/osm/metadata.xhtml
@@ -119,7 +119,7 @@
 
         <p>
 {% for ptype in ptypes %}
-          <a href="{% url osm_metadata ptype %}">{{ ptype }}</a>
+          <a href="{% url osm:metadata ptype %}">{{ ptype }}</a>
 {% endfor %}
         </p>
     
