--- a/trunk/mobile_portal/molly/templates/secure/base.xhtml
+++ b/trunk/mobile_portal/molly/templates/secure/base.xhtml
@@ -1,7 +1,7 @@
 {% extends "base.xhtml" %}
 
 {% block bottom_links %}{{ block.super }}<br/>
-  <a href="{% url secure_index %}">Security preferences</a><br/>
-  <a href="{% url secure_clear_session %}?return_url={{ path }}">Clear secure session</a>
+  <a href="{% url auth:index %}">Security preferences</a><br/>
+  <a href="{% url auth:clear_session %}?return_url={{ path }}">Clear secure session</a>
 {% endblock %}
     
