--- a/trunk/mobile_portal/molly/templates/sakai/signup_sites.xhtml
+++ b/trunk/mobile_portal/molly/templates/sakai/signup_sites.xhtml
@@ -8,7 +8,7 @@
 <ul>
 {% for id, title in sites %}
     <li {% if forloop.last %}class="round-bottom"{% endif %}>
-        <a href="{% url sakai_signup_site id %}">{{ title }}</a>
+        <a href="{% url sakai:signup_site id %}">{{ title }}</a>
     </li>
 {% endfor %}
 </ul>
