--- a/branches/extracting_oxford/molly/molly/apps/search/templates/search/index.xhtml
+++ b/branches/extracting_oxford/molly/molly/apps/search/templates/search/index.xhtml
@@ -1,4 +1,4 @@
-{% extends "googlesearch/base.xhtml" %}
+{% extends "search/base.xhtml" %}
 
 {% block pagetitle %}Search{% endblock %}
 {% block title %}m.ox | Search{% if results %}: {{ search_form.data.query }}{% endif %}{% endblock %}
