--- a/branches/extracting_oxford/molly/molly/templates/maps/map_elements.xhtml
+++ b/branches/extracting_oxford/molly/molly/templates/maps/map_elements.xhtml
@@ -10,4 +10,4 @@
         </a>
     {% endifnotequal %}
 {% endif %}
-    <div class="osm-license">Map &copy; <a href="{% url maps_static_openstreetmap %}">OpenStreetMap</a> and contributors, CC-BY-SA</div>
+    <div class="osm-license">Map &copy; <a href="{% url osm:about %}">OpenStreetMap</a> and contributors, CC-BY-SA</div>
