Moved weather app over to new BaseView.render method.

--- a/branches/extracting_oxford/molly/molly/apps/weather/templates/weather/index.html
+++ b/branches/extracting_oxford/molly/molly/apps/weather/templates/weather/index.html
@@ -1,4 +1,4 @@
-{% extends "weather/base.xhtml" %}
+{% extends "weather/base.html" %}
 
 {% block pagetitleclass %}weather-header with-icon{% endblock %}
 {% block pagetitle %}Weather{% endblock %}
