--- a/branches/extracting_oxford/molly/molly/templates/maps/nearby_detail.xhtml
+++ b/branches/extracting_oxford/molly/molly/templates/maps/nearby_detail.xhtml
@@ -1,7 +1,4 @@
-{% extends "maps/base.xhtml" %}
-{% load portal_misc %}
-
-{% block title %}m.ox | {{ entity_types.0.verbose_name_plural|capfirst }} near{% if entity %} {{ entity.title }}{% else %}by{% endif %}{% endblock %}
+{% extends "maps/base.xhtml" %}{% load portal_misc %}
 
 {% block extrahead %}{{ block.super }}{% if entity %}
 <meta name="robots" content="noindex" />{% endif %}{% endblock %}
@@ -51,11 +48,11 @@
 
 
 {% ifnotequal style_group "dumb" %}
-    <div class="backgrounded-image" style="background-image:url('{% url osm_generated_map map_hash %}'); height:{{ map_height }}px">
+    <div class="backgrounded-image" style="background-image:url('{% url osm:generated_map map_hash %}'); height:{{ map_height }}px">
     {% include "maps/map_elements.xhtml" %}
     </div>
 {% else %}
-    <img src="{% url osm_generated_map map_hash %}" alt="Map"><br />
+    <img src="{% url osm:generated_map map_hash %}" alt="Map"><br />
     {% include "maps/map_elements.xhtml" %}
 {% endifnotequal %}
 
