--- a/branches/extracting_oxford/molly/molly/templates/maps/metadata/oxpoints.html
+++ b/branches/extracting_oxford/molly/molly/templates/maps/metadata/oxpoints.html
@@ -1,23 +1,7 @@
-{% extends "maps/base.xhtml" %}
-{% load maps %}{% load portal_misc %}
-
-{% block breadcrumbs %}
-{{ block.super }}
-	<li><a href="{% url maps_index %}">
-        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/index-icons/maps-bc.png" alt="Maps"/>{% endif %}
-    </a></li>
-    <li><a href="{% url maps_nearby_detail entity.entity_type.slug %}">
-        {% if dumb %}{{ entity.entity_type.verbose_name_plural|capfirst }}{% else %}&hellip;{% endif %}</a></li>
-{% endblock %}
-
-{% block pagetitle %}{{ data.dc_title }}{% endblock %}
-
-{% block title %}m.ox | {{ entity.entity_type.verbose_name|capfirst }}: {{ data.dc_title }}{% endblock %}
-
-{% block content %}
+{% if entity.metadata.oxpoints %}{% load maps %}{% load portal_misc %}
 
 <div class="section">
-	<h2>{{ data.dc_title }}</h2>
+	<h2>{{ entity.metadata.oxpoints.dc_title }}</h2>
 <div class="article"><div class="bubble pad-5">
 	<dl>
 	{% if data.oxp_hasHomepage or data.oxp_hasITHomepage or data.oxp_hasWeblearn or data.oxp_hasLibraryHomepage %}
@@ -100,50 +84,6 @@
 {% endif %}
 
 
-<div class="section">
-    <h2>Map</h2>
-	{% if entity.location %}
-	
-	{% ifnotequal style_group "dumb" %}
-    	<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
-    		{% include "maps/map_elements.xhtml" %}
-    	</div>
-    {% else %}
-        <img src="{% map_url entity.location %}" alt="Map"><br />
-        {% include "maps/map_elements.xhtml" %}
-    {% endifnotequal %}
-    
-	<ul>
-	    <li class="round-bottom"><a href="{% url maps_entity_nearby_list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a></li>
-	</ul>
-	{% else %}
-	    <div class="note"><div class="bubble">
-	        We do not yet have a location for this {{ entity.entity_type.verbose_name }}.
-	    </div></div>
-	{% endif %}
-</div>
-
-{% if entity.metadata.tags.opening_hours or entity.metadata.tags.cost %}
-<div class="section">
-  <h2>Further information</h2>
-  <table class="section-table">
-    <tbody>
-{% if entity.metadata.tags.opening_hours %}
-      <tr>
-        <th>Opening hours:<th>
-        <td>{{ entity.metadata.tags.opening_hours }}</td>
-      </tr>
-{% endif %}
-{% if entity.metadata.tags.cost %}
-      <tr>
-        <th>Visitor admission:<th>
-        <td>{{ entity.metadata.tags.cost|capfirst }}</td>
-      </tr>
-{% endif %}
-    </tbody>
-  </table>
-</div>
-{% endif %}
 
 
-{% endblock %}
+{% endif %}
