Updated filenames for map templates: *.xhtml -> *.html

--- a/branches/extracting_oxford/molly/molly/maps/templates/maps/category_detail.html
+++ b/branches/extracting_oxford/molly/molly/maps/templates/maps/category_detail.html
@@ -1,4 +1,4 @@
-{% extends "maps/base.xhtml" %}
+{% extends "maps/base.html" %}
 {% load portal_misc %}
 
 {% block pagetitle %}{{ entity_types.0.verbose_name_plural|capfirst }}{% endblock %}
