--- a/branches/extracting_oxford/molly/molly/maps/templates/maps/nearby_list.html
+++ b/branches/extracting_oxford/molly/molly/maps/templates/maps/nearby_list.html
@@ -1,4 +1,4 @@
-{% extends "maps/base.xhtml" %}
+{% extends "maps/base.html" %}
 
 {% block extrahead %}{{ block.super }}{% if entity %}
 <meta name="robots" content="noindex" />{% endif %}{% endblock %}
