--- a/branches/extracting_oxford/molly/molly/maps/templates/maps/busstop.html
+++ b/branches/extracting_oxford/molly/molly/maps/templates/maps/busstop.html
@@ -1,4 +1,4 @@
-{% extends "maps/base.xhtml" %}
+{% extends "maps/base.html" %}
 {% load maps %}
 
 {% block title %}m.ox | Bus stop: {{ entity.title }}{% endblock %}
@@ -79,11 +79,11 @@ tr {
 
 {% ifnotequal style_group "dumb" %}
     <div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
-    {% include "maps/map_elements.xhtml" %}
+    {% include "maps/map_elements.html" %}
     </div>
 {% else %}
     <img src="{% map_url entity.location %}" alt="Map"><br />
-    {% include "maps/map_elements.xhtml" %chr}
+    {% include "maps/map_elements.html" %chr}
 {% endifnotequal %}
 
 
