Moved geolocation templates from *.xhtml to *.html

--- a/branches/extracting_oxford/molly/molly/geolocation/templates/geolocation/require_location.html
+++ b/branches/extracting_oxford/molly/molly/geolocation/templates/geolocation/require_location.html
@@ -1,7 +1,4 @@
-{% extends "base.xhtml" %}
-
-{% block title %}m.ox | Location required{% endblock %}
-{% block pagetitle %}Location required{% endblock %}
+{% extends "geolocation/base.html" %}
 
 {% block content %}
 
