--- a/branches/extracting_oxford/molly/molly/geolocation/templates/geolocation/update_location_confirm.html
+++ b/branches/extracting_oxford/molly/molly/geolocation/templates/geolocation/update_location_confirm.html
@@ -3,11 +3,11 @@
 {% if map_url %}
 {% ifnotequal style_group "dumb" %}
     <div class="backgrounded-image" style="background-image:url('{{ map_url }}'); height:{{ map_height }}px">
-    {% include "maps/map_elements.xhtml" %}
+    {% include "maps/map_elements.html" %}
     </div>
 {% else %}
     <img src="{{ map_url }}}" alt="Map"><br />
-    {% include "maps/map_elements.xhtml" %}
+    {% include "maps/map_elements.html" %}
 {% endifnotequal %}
 {% endif %}
 
