--- a/branches/extracting_oxford/molly/molly/geolocation/templates/geolocation/update_location_embed.html
+++ b/branches/extracting_oxford/molly/molly/geolocation/templates/geolocation/update_location_embed.html
@@ -26,7 +26,7 @@
 <div class="manual-update-location">
 {% if form.cleaned_data.name %}
 
-{% include "geolocation/update_location_confirm.xhtml" %}
+{% include "geolocation/update_location_confirm.html" %}
 
 {% else %}
 
