Tidying maps templates.  * fixed reverse lookups  * oxpoints metadata template now looking in correct place  * removing old page title template blocks

--- a/branches/extracting_oxford/molly/molly/maps/templates/maps/category_detail.html
+++ b/branches/extracting_oxford/molly/molly/maps/templates/maps/category_detail.html
@@ -37,12 +37,12 @@
 {% endif %}
 
 <ul>
-{% for entity in entities %}
+{% for entity in entities %}{% if entity.title %}
     <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{{ entity.get_absolute_url }}">
       {{ entity.title|capfirst }}{% if multiple_entity_types %}<br/>
       <small>{{ entity.entity_type|capfirst }}</small>{% endif %}
     </a></li>
-{% endfor %}
+{% endif %}{% endfor %}
 </ul>
 
 </div>
