--- a/branches/extracting_oxford/molly/molly/maps/templates/maps/category_list.html
+++ b/branches/extracting_oxford/molly/molly/maps/templates/maps/category_list.html
@@ -1,25 +1,12 @@
 {% extends "maps/base.html" %}
 
-
-{% block pagetitle %}Categories{% endblock %}
-{% block title %}m.ox | Maps - categories{% endblock %}
-
 {% block content %}
 
 <div class="section">
-  <h2>Public</h2>
+  <h2>Places</h2>
 	<ul>
-	{% for entity_type in public %}
-	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps_category_detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
-	{% endfor %}
-	</ul>
-</div>
-
-<div class="section">
-  <h2>University of Oxford</h2>
-	<ul>
-	{% for entity_type in university %}
-	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps_category_detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
+	{% for entity_type in entity_types %}
+	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps:category_detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
 	{% endfor %}
 	</ul>
 </div>
