--- a/branches/extracting_oxford/molly/molly/maps/templates/maps/nearby_list.html
+++ b/branches/extracting_oxford/molly/molly/maps/templates/maps/nearby_list.html
@@ -6,21 +6,10 @@
 {% block content %}
 
 <div class="section">
-  <h2>Public</h2>
+  <h2>Places</h2>
 	<ul>
-	{% for entity_type in public %}{% if entity %}
-	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps:entity_nearby_detail entity.entity_type.slug,entity.display_id,entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
-	{% else %}
-	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps:nearby_detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
-	{% endif %}{% endfor %}
-	</ul>
-</div>
-
-<div class="section">
-  <h2>University of Oxford</h2>
-	<ul>
-	{% for entity_type in university %}{% if entity %}
-	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps:entity_nearby_detail entity.entity_type.slug,entity.display_id,entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
+	{% for entity_type in entity_types %}{% if entity %}
+	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps:entity_nearby_detail entity.identifier_scheme,entity.identifier_value,entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
 	{% else %}
 	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps:nearby_detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
 	{% endif %}{% endfor %}
