--- a/branches/extracting_oxford/molly/molly/maps/templates/maps/category_detail.html
+++ b/branches/extracting_oxford/molly/molly/maps/templates/maps/category_detail.html
@@ -30,7 +30,7 @@
   {% if entity %}
     <a href="{% url maps:entity_category_list entity.identifier_scheme entity.identifier_value %}{{ et.slug }}{% for oet in entity_types %}{% if not et.subtype_of.all|contains:oet %};{{ oet.slug }}{% endif %}{% endfor %}/">{{ et.verbose_name_plural }}</a>
   {% else %}
-    <a href="{% url maps:category_list %}{{ et.slug }}{% for oet in entity_types %}{% if not et.subtype_of.all|contains:oet %};{{ oet.slug }}{% endif %}{% endfor %}/">{{ et.verbose_name_plural }}</a>
+    <a href="{% url maps:category_list %}{{ et.slug }}{% for oet in entity_types %}{% if not et.subtype_of_completion.all|contains:oet %};{{ oet.slug }}{% endif %}{% endfor %}/">{{ et.verbose_name_plural }}</a>
   {% endif %}
 {% if not forloop.last %} | {% endif %} 
 {% endfor %}
