Improved handling of OSM data.

--- a/branches/extracting_oxford/molly/molly/maps/templates/maps/entity_detail.html
+++ b/branches/extracting_oxford/molly/molly/maps/templates/maps/entity_detail.html
@@ -4,6 +4,7 @@
 
 {% include "maps/metadata/real_time_information.html" %}
 {% include "maps/metadata/oxpoints.html" %}
+{% include "maps/metadata/osm.html" %}
 
 
 
