--- a/branches/extracting_oxford/molly/demos/molly_oxford/templates/base.xhtml
+++ b/branches/extracting_oxford/molly/demos/molly_oxford/templates/base.xhtml
@@ -97,7 +97,7 @@
 {% block bottom_links %}    
         <a href="{% url home:feedback %}?referer={{ full_path|urlencode }}">Provide feedback for this page.</a><br />
 		<a href="http://chart.apis.google.com/chart?cht=qr&amp;chs={{ device.max_image_width }}x{{ device.max_image_width }}&amp;chl=http://m.ox.ac.uk{{ full_path|urlencode }}">2D Barcode for this page</a><br/>
-		<a rel="nofollow" href="{% url home:shorten_url %}?path={{ full_path|urlencode }}">Get short link for this page</a>
+		<a rel="nofollow" href="{% url url_shortener:shorten %}?path={{ full_path|urlencode }}">Get short link for this page</a>
 {% endblock %}
     </div>
 {% endif %}
