Added more points of interest from OSM. Made the places list more configurable.

--- a/branches/extracting_oxford/molly/molly/maps/templates/maps/nearby_list.html
+++ b/branches/extracting_oxford/molly/molly/maps/templates/maps/nearby_list.html
@@ -5,15 +5,17 @@
 
 {% block content %}
 
+{% for name, types in entity_types %}
 <div class="section">
-  <h2>Places</h2>
+  <h2>{{ name }}</h2>
 	<ul>
-	{% for entity_type in entity_types %}{% if entity %}
+	{% for entity_type in types %}{% if entity %}
 	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps:entity_nearby_detail entity.identifier_scheme,entity.identifier_value,entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
 	{% else %}
 	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps:nearby_detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
 	{% endif %}{% endfor %}
 	</ul>
 </div>
+{% endfor %}
 
 {% endblock %}
