--- a/branches/extracting_oxford/molly/molly/maps/templates/maps/nearby_list.html
+++ b/branches/extracting_oxford/molly/molly/maps/templates/maps/nearby_list.html
@@ -10,10 +10,10 @@
   <h2>{{ name }}</h2>
 	<ul>
 	{% for entity_type in types %}{% if entity %}
-	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps:entity_nearby_detail entity.identifier_scheme,entity.identifier_value,entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
+	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps:entity_nearby_detail entity.identifier_scheme,entity.identifier_value,entity_type.slug %}">
 	{% else %}
-	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps:nearby_detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
-	{% endif %}{% endfor %}
+	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps:nearby_detail entity_type.slug %}">
+	{% endif %} {{ entity_type.verbose_name_plural|capfirst }} <small>({{ entity_type.entities_found }} within {{ entity_type.max_distance.m|floatformat:"-0" }}m)</small></a></li>{% endfor %}
 	</ul>
 </div>
 {% endfor %}
